--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="width: 100%;margin: 0 10px"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
